packages/web/openshift/Routes.yml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: mage
  labels:
    app: mage
    app.kubernetes.io/component: mage
    app.kubernetes.io/instance: mage
    app.kubernetes.io/name: mage
    app.kubernetes.io/part-of: framework
spec:
  host: mybcabisnis-mage.apps.ocpdevgra.dti.co.id
  to:
    kind: Service
    name: mage
    weight: 100
  port:
    targetPort: 8080-tcp
  tls:
    termination: edge
    certificate: |-
      -----BEGIN CERTIFICATE-----
      MIIGYDCCBUigAwIBAgITJQAACnwWhXMan7l93QACAAAKfDANBgkqhkiG9w0BAQsF
[...]
      xkH8Aw==
      -----END CERTIFICATE-----
    key: |-
      -----BEGIN PRIVATE KEY-----
      MIIEvQIBADANBgkqhkiG9w0BAQEFAASCBKcwggSjAgEAAoIBAQCpEKkqOXfrlWmh
[...]
      CSZ/m9sbWMwB6Mn6F8jfb1k=
      -----END PRIVATE KEY-----
    caCertificate: |-
      -----BEGIN CERTIFICATE-----
      MIIEBDCCAuygAwIBAgIQWRrc69n8yZJJJ9J7HwCfqDANBgkqhkiG9w0BAQsFADB0
[...]
      WGx+/rblnXfETbt80r1VZCvg4JKeHstY
      -----END CERTIFICATE-----
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
